3-tier-terraform/c8-elasticip.tf
# Create Elastic IP for Bastion Host
# Resource - depends_on Meta-Argument
resource "aws_eip" "bastion_eip" { # defined in c7-03-ec2instnace-bastion.tf
#"resource type = aws_eip" "resource local name = bastion_eip"

  depends_on = [ module.ec2_public, module.vpc ]
  tags = local.common_tags
  instance = module.ec2_public.id
  domain   = "vpc" # this resource should be created VPC level
  
#
## Local Exec Provisioner:  local-exec provisioner (Destroy-Time Provisioner - Triggered during deletion of Resource)
  provisioner "local-exec" {
    command = "echo Destroy time prov `date` >> destroy-time-prov.txt"
    working_dir = "local-exec-output-files/"
    when = destroy
    #on_failure = continue
  }  
}
